--- a/XichNhua.html
+++ b/XichNhua.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Yoga, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Băng tải PVC, PU, TPU</title>
+    <title>Băng tải Xích Nhựa</title>
     <link type="image/x-icon" rel="icon" href="./img/favicon/favicon.ico" />
 
     <!-- Google Font -->
@@ -88,10 +88,10 @@
                             <ul class="sub-menu">
                                 <li><a href="./PVC.html">Băng tải PVC, PU, TPU</a></li>
                                 <li><a href="./ChiuNhiet.html">Băng tải chịu nhiệt</a></li>
-                                <li><a href="./XichNhua.html">Băng tải xích nhựa</a></li>
+                                <li><a href="#">Băng tải xích nhựa</a></li>
                                 <li><a href="./PURang.html">Dây PU răng</a></li>
                                 <li><a href="./DayTruyenDong.html">Dây đai truyền động</a></li>
-                                <li><a href="#">Đinh FLexco</a></li>
+                                <li><a href="./dinhFlexco.html">Đinh FLexco</a></li>
                             </ul>
                         </li>
                         <li><a href="./service.html">Dịch vụ</a></li>
@@ -116,49 +116,57 @@
                 <div class="row">
                     <div class="col-lg-12 ">
                         <div class="section-title text-center">
-                            <h3>Đinh FLexco</h3>
+                            <h3>Băng tải Xích nhựa</h3>
                         </div>
 
-                        <div class="section-detail">
-                            <span>
-                                <strong>Đinh nối băng tải</strong> thương hiệu <strong>FLEXCO</strong> đến từ Mỹ là một
-                                trong những
-                                phương pháp tối ưu
-                                trong việc kết nối 2 đầu băng tải và được áp dụng trong nhiều ngành công nghiệp sản xuất
-                                khác nhau như: nông nghiệp, xử lí bưu kiện, sản xuất gỗ, thực phẩm ,…
+                        <div class="section-detail PTFE">
+                            <span>HONGSBELT là nhà sản xuất chuyên nghiệp chuyên về Dây băng tải, Dây đai mô-đun, Dây
+                                chuyền dẹt, Băng tải PVC & PU và các thành phần nhựa khác như UHMW profile cho phép
+                                khách hàng trên toàn thế giới tăng năng lực sản xuất, giảm chi phí và giảm thiểu thời
+                                gian ngừng hoạt động trong các nhà máy.
+                                <br><br>Trong mười lăm năm qua, chúng tôi cung cấp cho khách hàng nhiều loại sản phẩm
+                                sáng tạo và các sản phẩm song song có thể sánh ngang với đối thủ cạnh tranh của chúng
+                                tôi. Với kiến thức chuyên môn của mình, chúng tôi có thể tư vấn các sản phẩm tốt hơn cho
+                                các ngành công nghiệp khác nhau như bánh mì, chế biến trái cây và rau quả, thịt và gia
+                                cầm, lốp xe, bao bì, tủ đông IQS và đèn chạy bằng pin hoạt tính. Chúng tôi cung cấp các
+                                giải pháp chính xác và giúp khách hàng giảm chi phí vận hành.
                                 <br><br>
-                                <h5><strong>Ưu điểm:</strong></h5>
-                                <ul>
-                                    <li>Lắp đặt đơn giản và nhanh chóng giúp tiết kiệm thời gian.</li>
-                                    <li>Có độ bền cao và tiếp xúc được nhiều môi trường khác nhau như nhiệt độ, độ ẩm
-                                        hoặc chất gây ô nhiễm.</li>
-                                    <li>Giúp tháo băng tải mà không cần cắt rời băng tải.</li>
-                                    <li>Đinh móc nối băng tải là yếu tố chính giúp cho việc nối tròn của dây băng một
-                                        cách nhanh chóng và linh động. Giúp khách hàng có thể tiết kiệm được thời gian
-                                        tối đa khi cần thay băng mà ko cần tháo dỡ máy gây mất thời gian và công sức.
-                                    </li>
-                                </ul>
+                                Trong các ứng dụng thực phẩm, vệ sinh vành đai là một yếu tố quan trọng trong các yêu
+                                cầu an toàn của khách hàng. Để đảm bảo các tiêu chuẩn an toàn cao, tất cả các thiết bị
+                                và dây đai phải được làm sạch sâu bằng cách sử dụng chất tẩy rửa mạnh trước khi được rửa
+                                sạch. Sau đây là những ưu điểm:
                                 <br>
-
-                                <strong>Đinh móc inox</strong> được chia làm nhiều dạng khác nhau, có <strong>đinh móc
-                                    dẹp</strong> và
-                                <strong>đinh móc tròn</strong>. Tùy
-                                theo từng loại băng tải mà được dùng loại đinh móc khác nhau, độ dày phi móc cũng được
-                                điều chỉnh cho phù hợp.
-                                <br><br><strong>Đinh bản lề</strong> nhựa cũng được dùng cho nối băng cho những máy dò
-                                kim
-                                loại, tải trọng nhẹ và tốc độ chạy chậm.<br><br>
-                                <strong>Đinh bản lề inox</strong> dùng được nối cho dây băng PVC,PU hay băng tải cao su
-                                có độ dày khác
-                                nhau.
-
+                                <strong>Khả năng chống lại các điều kiện khắc nghiệt</strong>
+                                <br>Đai mô-đun bằng nhựa hoạt động an toàn và đáng tin cậy trong nhiều điều kiện và
+                                nhiệt độ khác nhau, từ -70 ° C đến + 240 ° C. Dòng sản phẩm HONGSBELT có giải pháp cho
+                                các biến đổi nhiệt độ rộng, độ ẩm, tác nhân hóa học mạnh, hoạt động cắt, tác động sản
+                                phẩm, tốc độ cao và môi trường mài mòn.
+                                <br><br>
+                                <strong>Thời gian tồn tại lâu hơn</strong>
+                                <br>
+                                Trong điều kiện tiêu chuẩn, dây đai mô-đun bằng nhựa thường có tuổi thọ rất cao, kéo dài
+                                trong nhiều năm mà không thay đổi hiệu suất và ít hoặc không cần bảo dưỡng.
+                                <br><br>
+                                <strong>Cường độ cao</strong>
+                                <br>
+                                So với các giải pháp dây đai khác, dây đai mô-đun nhựa có độ bền rất cao, có thể đáp ứng
+                                tất cả các ứng dụng khắt khe nhất của ngành. Đồng thời, chúng cũng thích hợp cho các ứng
+                                dụng tích lũy và chuyển hướng có ảnh hưởng đến hoạt động và tuổi thọ của các giải pháp
+                                dây đai khác.
+                                <br><br>
+                                <strong>Nhiều loại bề mặt</strong>
+                                <br>Thắt lưng mô-đun nhựa HONGSBELT cung cấp nhiều loại bề mặt khác nhau để mang lại các
+                                đặc tính cụ thể cần thiết. Từ lưới phẳng đến đỉnh con lăn có một bề mặt phù hợp với các
+                                yêu cầu của ứng dụng băng tải của bạn.
                             </span>
+
 
                         </div>
                         <div class="show-more">Xem thêm</div>
                     </div>
                 </div>
                 <div class="row product-list" id="product-list">
+
                 </div>
             </div>
     </section>
@@ -197,7 +205,8 @@
                         <div class="single-footer-widget text-left">
                             <h4>Địa Chỉ</h4>
                             <ul>
-                                <li>362/109 Hiệp Thành 13, Khu Phố 7, Phường Hiệp Thành, Quận 12, Thành phố Hồ Chí Minh
+                                <li>362/109 Hiệp Thành 13, Khu Phố 7, Phường Hiệp Thành, Quận 12, Thành phố Hồ Chí
+                                    Minh
                                 </li>
                             </ul>
                         </div>
@@ -216,7 +225,8 @@
                         <div class="single-footer-widget text-left">
                             <h4>Mail</h4>
                             <ul>
-                                <li><a href="mailto:phongkinhdoanh@thecaovn.com">phongkinhdoanh@thecaovn.com</a></li>
+                                <li><a href="mailto:phongkinhdoanh@thecaovn.com">phongkinhdoanh@thecaovn.com</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -271,7 +281,7 @@
     <script src="js/jquery.nice-select.min.js"></script>
     <script src="js/mixitup.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="./js/products/DinhFlexco.js"></script>
+    <script src="./js/products/XichNhua.js"></script>
 </body>
 
 </html>
