--- a/contact.html
+++ b/contact.html
@@ -56,12 +56,12 @@
                     <ul>
                         <li><a href="./index.html">Trang chủ</a></li>
                         <li><a href="infomation.html">Giới thiệu</a></li>
-                        <li><a class="root-menu" href="#">Sản phẩm</a>
+                        <li><a class=" root-menu" href="#">Sản phẩm</a>
                             <p>Sản phẩm</p>
                             <ul class="sub-menu">
                                 <li><a href="./PVC.html">Băng tải PVC, PU, TPU</a></li>
-                                <li><a href="product-page.html">Băng tải chịu nhiệt</a></li>
-                                <li><a href="product-page.html">Băng tải xích nhựa</a></li>
+                                <li><a href="./ChiuNhiet.html">Băng tải chịu nhiệt</a></li>
+                                <li><a href="./XichNhua.html">Băng tải xích nhựa</a></li>
                                 <li><a href="./PURang.html">Dây PU răng</a></li>
                                 <li><a href="./DayTruyenDong.html">Dây đai truyền động</a></li>
                                 <li><a href="./dinhFlexco.html">Đinh FLexco</a></li>
