--- a/index.html
+++ b/index.html
@@ -71,15 +71,16 @@
                     <a href="./index.html"><img src="./img/logo.png" alt=""></a>
                 </div>
                 <nav class="main-menu mobile-menu">
+
                     <ul>
-                        <li><a class="active" href="./index.html">Trang chủ</a></li>
+                        <li><a class="active" href="#">Trang chủ</a></li>
                         <li><a href="infomation.html">Giới thiệu</a></li>
-                        <li><a class="root-menu" href="#">Sản phẩm</a>
+                        <li><a class=" root-menu" href="#">Sản phẩm</a>
                             <p>Sản phẩm</p>
                             <ul class="sub-menu">
                                 <li><a href="./PVC.html">Băng tải PVC, PU, TPU</a></li>
-                                <li><a href="product-page.html">Băng tải chịu nhiệt</a></li>
-                                <li><a href="product-page.html">Băng tải xích nhựa</a></li>
+                                <li><a href="./ChiuNhiet.html">Băng tải chịu nhiệt</a></li>
+                                <li><a href="./XichNhua.html">Băng tải xích nhựa</a></li>
                                 <li><a href="./PURang.html">Dây PU răng</a></li>
                                 <li><a href="./DayTruyenDong.html">Dây đai truyền động</a></li>
                                 <li><a href="./dinhFlexco.html">Đinh FLexco</a></li>
@@ -195,7 +196,7 @@
                 <div class="col-lg-4 col-6 mix all dresses bags">
                     <div class="single-product-item">
                         <figure>
-                            <a href="./product-page.html"><img src="./img/products/Luoi.jpg" alt=""></a>
+                            <a href="./ChiuNhiet.html"><img src="./img/products/Luoi.jpg" alt=""></a>
                         </figure>
                         <div class="product-text">
                             <h6>Băng tải chịu nhiệt</h6>
@@ -206,7 +207,7 @@
                 <div class="col-lg-4 col-6 mix all dresses shoes">
                     <div class="single-product-item">
                         <figure>
-                            <a href="./product-page.html"><img src="./img/products/4255b3ed72f3454da42feec4a2b4b7ff.jpg"
+                            <a href="./XichNhua.html"><img src="./img/products/4255b3ed72f3454da42feec4a2b4b7ff.jpg"
                                     alt=""></a>
                         </figure>
                         <div class="product-text">
@@ -219,7 +220,7 @@
                 <div class="col-lg-4 col-6 mix all accesories bags">
                     <div class="single-product-item">
                         <figure>
-                            <a href="./product-page.html"><img src="./img/products/PURang.jpg" alt=""></a>
+                            <a href="./PURang.html"><img src="./img/products/PURang.jpg" alt=""></a>
                         </figure>
                         <div class="product-text">
                             <h6>Dây PU răng</h6>
@@ -230,7 +231,7 @@
                 <div class="col-lg-4 col-6 mix all shoes accesories">
                     <div class="single-product-item">
                         <figure>
-                            <a href="./product-page.html"><img src="./img/products/day-dai-truyen-dong.jpg" alt=""></a>
+                            <a href="./DayTruyenDong.html"><img src="./img/products/day-dai-truyen-dong.jpg" alt=""></a>
                         </figure>
                         <div class="product-text">
                             <h6>Dây đai truyền động</h6>
