--- a/ChiuNhiet.html
+++ b/ChiuNhiet.html
@@ -88,7 +88,7 @@
                             <ul class="sub-menu">
                                 <li><a href="./PVC.html">Băng tải PVC, PU, TPU</a></li>
                                 <li><a href="#">Băng tải chịu nhiệt</a></li>
-                                <li><a href="product-page.html">Băng tải xích nhựa</a></li>
+                                <li><a href="./XichNhua.html">Băng tải xích nhựa</a></li>
                                 <li><a href="./PURang.html">Dây PU răng</a></li>
                                 <li><a href="./DayTruyenDong.html">Dây đai truyền động</a></li>
                                 <li><a href="./dinhFlexco.html">Đinh FLexco</a></li>
@@ -105,61 +105,6 @@
     <!-- Hero Slider Begin -->
     <section class="hero-slider">
         <div class="hero-items owl-carousel">
-            <div class="single-slider-item set-bg" data-setbg="./img/slide/[GetPaidStock.com]-636b282deebd3.jpg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h1>2019</h1>
-                            <h2>Lookbook.</h2>
-                            <a href="#" class="primary-btn">See More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="single-slider-item set-bg" data-setbg="./img/slide/[GetPaidStock.com]-636b279caad49.jpg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h1>2019</h1>
-                            <h2>Lookbook.</h2>
-                            <a href="#" class="primary-btn">See More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="single-slider-item set-bg" data-setbg="./img/slide/[GetPaidStock.com]-636b26adbe76e.jpg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h1>2019</h1>
-                            <h2>Lookbook.</h2>
-                            <a href="#" class="primary-btn">See More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="single-slider-item set-bg" data-setbg="./img/slide/istockphoto-1419084424-612x612.jpg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h1>2019</h1>
-                            <h2>Lookbook.</h2>
-                            <a href="#" class="primary-btn">See More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="single-slider-item set-bg" data-setbg="./img/slide/bang-tai-chiu-nhiet.jpg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h1>2019</h1>
-                            <h2>Lookbook.</h2>
-                            <a href="#" class="primary-btn">See More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
     <!-- Hero Slider End -->
