--- a/PVC.html
+++ b/PVC.html
@@ -86,8 +86,8 @@
                             <p>Sản phẩm</p>
                             <ul class="sub-menu">
                                 <li><a href="#">Băng tải PVC, PU, TPU</a></li>
-                                <li><a href="product-page.html">Băng tải chịu nhiệt</a></li>
-                                <li><a href="product-page.html">Băng tải xích nhựa</a></li>
+                                <li><a href="./ChiuNhiet.html">Băng tải chịu nhiệt</a></li>
+                                <li><a href="./XichNhua.html">Băng tải xích nhựa</a></li>
                                 <li><a href="./PURang.html">Dây PU răng</a></li>
                                 <li><a href="./DayTruyenDong.html">Dây đai truyền động</a></li>
                                 <li><a href="./dinhFlexco.html">Đinh FLexco</a></li>
