--- a/PURang.html
+++ b/PURang.html
@@ -189,19 +189,28 @@
     <div class="logo-section spad">
         <div class="logo-items owl-carousel">
             <div class="logo-item">
-                <img src="./img/logos/logo-1.png" alt="">
+                <img src="./img/logos/Nestlé.svg.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/logo-2.png" alt="">
+                <img src="./img/logos/Pepsi_logo.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/logo-3.png" alt="">
+                <img src="./img/logos/olam-international.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/logo-4.png" alt="">
+                <img src="./img/logos/Logo-AceCook-VN.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/logo-5.png" alt="">
+                <img src="./img/logos/Logo-JT-Express.png" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="./img/logos/GS.png" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="./img/logos/Kenda_Logo.svg.png" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="./img/logos/cropped-thp.png" alt="">
             </div>
         </div>
     </div>
