--- a/contact.html
+++ b/contact.html
@@ -86,8 +86,8 @@
                         <h2>Contact us<span>.</span></h2>
                     </div>
                 </div>
-                <div class="col-lg-8">
-                    <img src="img/add.jpg" alt="">
+                <div style="text-align: end;" class="col-lg-8">
+                    <img src="./img/contact/contact.jpg" alt="">
                 </div>
             </div>
         </div>
