--- a/service.html
+++ b/service.html
@@ -137,30 +137,38 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-lg-6"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/fD3f2c-XM8o"
+                <div class="col-lg-6">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/fD3f2c-XM8o"
                         title="Gia công ép băng tải tại nhà xưởng khách hàng" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <div class="slider-mini">
-                        <div class="slider-mini-item" style="background-image: url(./img/services/bangtaicong.png);">
+                        allowfullscreen>
+                    </iframe>
+                    <section class="hero-slider slider-mini">
+                        <div class="hero-items owl-carousel">
+                            <div class="single-slider-item">
+
+                                <img src="./img/services/bangtaicong.png" alt="">
+                            </div>
+                            <div class="single-slider-item">
+
+                                <img src="./img/services/danbeo.jpg" alt="">
+                            </div>
+                            <div class="single-slider-item">
+
+                                <img src="./img/services/duclo.jpg" alt="">
+                            </div>
+                            <div class="single-slider-item">
+
+                                <img src="./img/services/dancaosu.jpg" alt="">
+                            </div>
+                            <div class="single-slider-item">
+
+                                <img src="./img/services/dango.jpg" alt="">
+                            </div>
                         </div>
-                        <div class="slider-mini-item" style="background-image: url(./img/services/danbeo.jpg);"></div>
+                    </section>
 
-                        <div class="slider-mini-item" style="background-image: url(./img/services/duclo.jpg);"></div>
-
-                        <div class="slider-mini-item" style="background-image: url(./img/services/dancaosu.jpg);"></div>
-
-                        <div class="slider-mini-item" style="background-image: url(./img/services/dango.jpg);"></div>
-
-                        <div class="dot-slide-mini">
-
-                            <span class="active"></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </div>
-                    </div>
+                    <img class="img-service-distributive" src="./img/services/PhanPhoiSiLe.jpg" alt="as">
                 </div>
             </div>
         </div>
@@ -218,19 +226,28 @@
     <div class="logo-section spad">
         <div class="logo-items owl-carousel">
             <div class="logo-item">
-                <img src="./img/logos/logo-1.png" alt="">
+                <img src="./img/logos/Nestlé.svg.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/logo-2.png" alt="">
+                <img src="./img/logos/Pepsi_logo.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/logo-3.png" alt="">
+                <img src="./img/logos/olam-international.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/logo-4.png" alt="">
+                <img src="./img/logos/Logo-AceCook-VN.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/logo-5.png" alt="">
+                <img src="./img/logos/Logo-JT-Express.png" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="./img/logos/GS.png" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="./img/logos/Kenda_Logo.svg.png" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="./img/logos/cropped-thp.png" alt="">
             </div>
         </div>
     </div>
@@ -315,15 +332,15 @@
     <!-- Footer Section End -->
 
     <!-- Js Plugins -->
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/jquery.slicknav.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.nice-select.min.js"></script>
-    <script src="js/mixitup.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="./js/service.js"></script>
+    <script src="./js/jquery-3.3.1.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/jquery.magnific-popup.min.js"></script>
+    <script src="./js/jquery.slicknav.js"></script>
+    <script src="./js/owl.carousel.min.js"></script>
+    <script src="./js/jquery.nice-select.min.js"></script>
+    <script src="./js/mixitup.min.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/services.js"></script>
 </body>
 
 </html>
