--- a/PVC.html
+++ b/PVC.html
@@ -162,6 +162,37 @@
     </section>
     <!-- Latest Product End -->
 
+    <!-- Logo Section Begin -->
+    <div class="logo-section spad">
+        <div class="logo-items owl-carousel">
+            <div class="logo-item">
+                <img src="./img/logos/Nestlé.svg.png" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="./img/logos/Pepsi_logo.png" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="./img/logos/olam-international.png" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="./img/logos/Logo-AceCook-VN.png" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="./img/logos/Logo-JT-Express.png" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="./img/logos/GS.png" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="./img/logos/Kenda_Logo.svg.png" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="./img/logos/cropped-thp.png" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- Logo Section End -->
+
 
     <!-- Footer Section Begin -->
     <footer class="footer-section spad">
