--- a/XichNhua.html
+++ b/XichNhua.html
@@ -199,6 +199,9 @@
             <div class="logo-item">
                 <img src="./img/logos/cropped-thp.png" alt="">
             </div>
+            <div class="logo-item">
+                <img src="./img/logos/meatDeli.png" alt="">
+            </div>
         </div>
     </div>
     <!-- Logo Section End -->
