--- a/service.html
+++ b/service.html
@@ -137,12 +137,20 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-lg-6">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/fD3f2c-XM8o"
+                <div class="col-lg-6 ">
+                    <iframe class="iframe-factory" width="100%" height="100%"
+                        src="https://www.youtube.com/embed/fD3f2c-XM8o"
                         title="Gia công ép băng tải tại nhà xưởng khách hàng" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen>
                     </iframe>
+
+                    <iframe class="iframe-nurture" width="339" height="603"
+                        src="https://www.youtube.com/embed/dvE2b54JSfM"
+                        title="Băng Tải Xích Nhựa- sử dụng trong ngành thực phẩm" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+
                     <section class="hero-slider slider-mini">
                         <div class="hero-items owl-carousel">
                             <div class="single-slider-item">
@@ -168,7 +176,18 @@
                         </div>
                     </section>
 
-                    <img class="img-service-distributive" src="./img/services/PhanPhoiSiLe.jpg" alt="as">
+                    <img class="img-service-distributive" src="./img/services/PhanPhoiSiLe.jpg" alt="as" />
+                    <section class="notepaper">
+                        <figure class="quote">
+                            <blockquote class="curly-quotes">Công ty thế cao đã luôn kinh doanh trong và ngoài nước hơn
+                                20 năm dẫn đến có nhiều nhà cung cấp quốc tế đang hợp tác với thế cao. Do đó thế cao
+                                chúng tôi luôn tìm được các mặt hàng uy tín, chất lượng cao và giá cả hợp lý nhất có
+                                thể.
+                            </blockquote>
+                            <figcaption class="quote-by">— THẾ CAO —</figcaption>
+                        </figure>
+                    </section>
+
                 </div>
             </div>
         </div>
