--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,10 @@
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+
+
+    <script src="https://smtpjs.com/v3/smtp.js">
+    </script>
 </head>
 
 <body>
