--- a/service.html
+++ b/service.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Yoga, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cty TNHH MTV Thế Cao</title>
+    <title>Dịch vụ</title>
     <link type="image/x-icon" rel="icon" href="./img/favicon/favicon.ico" />
 
 
