--- a/career/Wheel manufacturing industry.html
+++ b/career/Wheel manufacturing industry.html
@@ -185,9 +185,12 @@
 
                 </div>
                 <div class="catalog-download">
-                    <a href="http://127.0.0.1:5500/img/career/BanhXe/catalo ngành sản xuất bánh xe.pdf"
-                        style="box-sizing: border-box; margin: 0px; padding: 0px; border: 0px; outline: 0px; vertical-align: baseline; background: transparent; color: rgb(51, 122, 183); text-decoration-line: none; transition: all 406ms ease-out 0s;">BẤM
-                        ĐỂ TẢI VỀ</a>
+                    <a href="https://www.thecaovn.space/img/career/BanhXe/catalo ngành sản xuất bánh xe.pdf"
+                        download="Băng tải sản xuất bánh xe">
+                        <span>Download catalog Băng tải ngành sản xuất bánh xe</span>
+                    </a>
+
+
                 </div>
             </div>
     </section>
